--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <li class="timeline-item">
           <h4 class="timeline-item-title">University of Toronto, 2024</h4>
           <h5 class="timeline-item-role">
-            Study Placement, Machine Learning and Computational Healthcare
+            3-month Study Placement, Machine Learning and Computational Healthcare
           </h5>
           <p class="timeline-item-text">
             Supervised by
