--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="featurette">
       <h3 class="featurette-heading">My Interests</h3>
       <h4>I am curious about all things ML and Maths, but specifically:</h4>
-      <p> I have worked in the following areas:
+      <p>
       <ul>
         <li> The use of pretrained models in healthcare monitoring </li>
         <li> Learning from noisy data </li>
@@ -117,6 +117,25 @@
       </p>
 
     </div>
+
+
+
+
+    <hr class="featurette-divider" id="publications">
+
+    <div class="featurette">
+      <h3 class="featurette-heading">Publications</h3>
+      <div>
+        <p>Some of the publications I have worked on are listed below:</p>
+        <ul class="project-list" id="pubbib"></ul>
+        <div style="display: flex;">
+          <button id="showMoreButton">Show More</button>
+          <button id="showLessButton">Show Less</button>
+        </div>
+      </div>
+    </div>
+
+
 
 
 
@@ -150,6 +169,9 @@
             <a href="https://www.cs.toronto.edu/~rahulgk/" target="_blank">Rahul Krishnan</a>:
             Studying the use of language models
             in building probabilistic predictive models.
+          </p>
+          <p>
+            This was funded through the Turing Global Fellows Fund.
           </p>
         </li>
 
@@ -217,30 +239,11 @@
 
 
 
-    <hr class="featurette-divider" id="publications">
-
-    <div class="featurette">
-      <h3 class="featurette-heading">Publications</h3>
-      <div>
-        <p>Some of my key works are listed below:</p>
-        <ul class="project-list" id="pubbib"></ul>
-        <div style="display: flex;">
-          <button id="showMoreButton">Show More</button>
-          <button id="showLessButton">Show Less</button>
-        </div>
-      </div>
-    </div>
-
-
-
-
-
-
     <hr class="featurette-divider" id="projects">
 
     <div class="featurette">
       <h3 class="featurette-heading">Projects</h3>
-      <h4>The following are some projects I am working on:</h4>
+      <h4>The following are some public projects I am working on:</h4>
 
       <ul class="" project-list>
 
