--- a/llm-elicited-priors.html
+++ b/llm-elicited-priors.html
@@ -208,22 +208,27 @@
           <h2 class="section-title">Abstract</h2>
           <div class="content section-text section-box">
             <p>
-              Large language models (LLMs), trained on diverse data effectively acquire a breadth of information across
-              various domains. However, their computational complexity, cost, and lack of transparency hinder their
-              direct application for specialised tasks. In fields such as clinical research, acquiring expert
-              annotations or prior knowledge about predictive models is often costly and time-consuming. This study
-              proposes using LLMs to elicit expert prior distributions for predictive models. This approach also
-              provides an alternative to in-context learning, where language models are tasked with making predictions
-              directly. We compare LLM-elicited and uninformative priors, evaluate whether LLMs truthfully generate
-              parameter distributions, and propose a model selection strategy for in-context learning and prior
-              elicitation. Our findings show that LLM-elicited prior parameter distributions significantly reduce
-              predictive error compared to uninformative priors in low-data settings. Applied to clinical problems, this
-              translates to fewer required biological samples, lowering cost and resources. Prior elicitation also
-              consistently outperforms and proves more reliable than in-context learning at a lower cost, making it a
-              preferred alternative in our setting. We demonstrate the utility of this method across various use cases,
-              including clinical applications. For infection prediction, using LLM-elicited priors reduced the number of
-              required labels to achieve the same accuracy as an uninformative prior by 55%, at 200 days earlier in the
-              study.
+              Large language models (LLMs), trained on diverse data effectively acquire a
+              breadth of information across various domains. However, their computational
+              complexity, cost, and lack of transparency hinder their direct application for
+              specialised tasks. In fields such as clinical research, acquiring expert
+              annotations or prior knowledge about predictive models is often costly and
+              time-consuming. This study proposes the use of LLMs to elicit expert prior
+              distributions for predictive models. This approach also provides an alternative
+              to in-context learning, where language models are tasked with making
+              predictions directly. In this work, we compare LLM-elicited and uninformative
+              priors, evaluate whether LLMs truthfully generate parameter distributions, and
+              propose a model selection strategy for in-context learning and prior
+              elicitation. Our findings show that LLM-elicited prior parameter distributions
+              significantly reduce predictive error compared to uninformative priors in
+              low-data settings. Applied to clinical problems, this translates to fewer
+              required biological samples, lowering cost and resources. Prior elicitation
+              also consistently outperforms and proves more reliable than in-context learning
+              at a lower cost, making it a preferred alternative in our setting. We
+              demonstrate the utility of this method across various use cases, including
+              clinical applications. For infection prediction, using LLM-elicited priors
+              reduced the number of required labels to achieve the same accuracy as an
+              uninformative prior by 55%, 200 days earlier in the study.
             </p>
           </div>
         </div>
