--- a/llm-elicited-priors.html
+++ b/llm-elicited-priors.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly.">
   <meta property="og:title"
-    content="Using Large Language Models for Expert Prior Elicitation in Predictive Modelling" />
+    content="AutoElicit: Using Large Language Models for Expert Prior Elicitation in Predictive Modelling" />
   <meta property="og:description"
     content="In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly." />
   <meta property="og:url" content="https://alexcapstick.github.io/llm-elicited-priors" />
@@ -18,7 +18,8 @@
   <meta property="og:image:height" content="526" />
 
 
-  <meta name="twitter:title" content="Using Large Language Models for Expert Prior Elicitation in Predictive Modelling">
+  <meta name="twitter:title"
+    content="AutoElicit: Using Large Language Models for Expert Prior Elicitation in Predictive Modelling">
   <meta name="twitter:description"
     content="In this work we present a method for using large language models to elicit expert priors for linear predictive models and demonstrate how human experts can aid the process. We then compare these posterior predictions with those made through in-context learning, where language models make predictions directly.">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
@@ -1047,7 +1048,7 @@
         <div class="container is-max-desktop content">
           <h2 class="section-title">BibTeX</h2>
           <pre><code>@article{capstick2024autoelicit,
-  title={AutoElicit: Using Large Language Models for Expert Prior Elicitation in Predictive Modelling},
+  title={AutoElicit: AutoElicit: Using Large Language Models for Expert Prior Elicitation in Predictive Modelling},
   author={Capstick, Alexander and Krishnan, Rahul G and Barnaghi, Payam},
   journal={arXiv preprint arXiv:2411.17284},
   year={2024}
