--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
         building new techniques that are applicable to healthcare.
       </p>
 
-
       <p>
-        I am a small part of the
+        I am a part of the
         <a href="https://tmi-lab.github.io/" target="_blank">Translational Machine Intelligence Lab</a>,
         supervised by
         <a href="https://profiles.imperial.ac.uk/p.barnaghi" target="_blank">Payam Barnaghi</a>.
@@ -107,13 +106,17 @@
       <h4>I am curious about all things ML and Maths, but specifically:</h4>
       <p>
       <ul>
-        <li> The use of pretrained models in healthcare monitoring </li>
+        <li> How humans and machine learning can aid each other </li>
+        <li> The use of pretrained models and LLMs in healthcare </li>
         <li> Learning from noisy data </li>
-        <li> Predicting clinical events from in-home time-series data </li>
-        <li> Generative modeling </li>
+        <li> Predicting clinical events from time-series data </li>
         <li> Meta-learning </li>
         <li> Continual learning </li>
       </ul>
+      </p>
+
+      <p>
+        I am also interested in photography, both film and digital.
       </p>
 
     </div>
