Add logo of python package to website

--- a/llm-elicited-priors.html
+++ b/llm-elicited-priors.html
@@ -58,7 +58,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title publication-title">Using Large Language Models for Expert Prior Elicitation in
+            <h1 class="title publication-title">AutoElicit: Using
+              Large Language Models for Expert Prior Elicitation in
               Predictive Modelling</h1>
             <div class="publication-authors">
               <!-- Paper authors -->
@@ -127,7 +128,18 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span class="publication-link-text">Code</span>
+                    <span class="publication-link-text">Reproduce paper</span>
+                  </a>
+                </span>
+
+                <!-- Github link -->
+                <span class="link-block">
+                  <a href="https://github.com/alexcapstick/autoelicit" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span class="publication-link-text">Implement method</span>
                   </a>
                 </span>
 
@@ -148,6 +160,25 @@
       </div>
     </div>
   </section>
+
+
+
+  <section class="section hero ">
+    <div class="container is-max-desktop">
+      <div>
+        <a href="https://github.com/alexcapstick/autoelicit" target="_blank">
+          <img class="figure" src="./llm-elicited-priors/static/images/autoelicit_logo.png" style="width: 50%" />
+        </a>
+        <h2 class="figure-caption has-text-centered">
+          To implement these methods, please use the python package: <br><a
+            href="https://github.com/alexcapstick/autoelicit" target="_blank"><code
+              style="text-decoration: underline">pip install autoelicit</code></a>
+        </h2>
+      </div>
+    </div>
+  </section>
+
+
 
 
   <!-- Paper introduction -->
