--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <p>
         I am a student at Imperial College London pursuing a PhD focused on developing
         machine learning techniques for the extraction of clinical insights from in-home monitoring data,
-        mostly focused on people living with Dementia.
+        focusing on people living with Dementia.
       </p>
 
       <p>
@@ -110,7 +110,6 @@
         <li> Learning from noisy data </li>
         <li> Predicting clinical events from time-series data </li>
         <li> Meta-learning </li>
-        <li> Continual learning </li>
       </ul>
       </p>
 
@@ -251,17 +250,33 @@
 
 
         <li>
+          <a href="https://github.com/alexcapstick/autoelicit/" target="_blank">
+            <h4 class="project-item">AutoElicit</h4>
+          </a>
+          <p class="project-description">
+            This is a python module that was developed based on the work "AutoElicit: Using Large Language Models 
+            for Expert Prior Elicitation in Predictive Modelling".
+          </p>
+          <p class="project-description">
+            The module provides a framework for using large language models (LLMs) to elicit expert knowledge 
+            in predictive modeling tasks. It includes tools for generating prior distributions.
+        </li>
+
+
+        <li>
           <a href="https://ml4ns.github.io/" target="_blank">
             <h4 class="project-item">Machine Learning for Neuroscience Module</h4>
           </a>
           <p class="project-description">
             This is a module I am a assistant teacher for at Imperial College London for the MSc
             Computational Neuroscience.
-            I also put the course website together, which is a work in progress!
           </p>
+            <p class="project-description">
+              This module introduces students to the application of machine learning techniques in neuroscience. 
+              It covers topics such as neural data analysis, predictive modeling, and the use of deep learning 
+              frameworks like PyTorch. The course website provides additional resources and materials for students.
+            </p>
         </li>
-
-
 
 
         <li>
@@ -273,61 +288,11 @@
           </p>
         </li>
 
-
-
-        <li>
-          <a href="https://alexcapstick-aml.readthedocs.io/en/latest/" target="_blank">
-            <h4 class="project-item">AML Python Package</h4>
-          </a>
-          <p class="project-description">
-            Some of my Machine Learning code.
-          </p>
-        </li>
-
-
-
-        <li>
-          <a href="https://skutils.readthedocs.io/en/latest/" target="_blank">
-            <h4 class="project-item">SKU Python Package</h4>
-          </a>
-          <p class="project-description">
-            Sci-kit Learn Utils add extra functionality to pipelines,
-            and allow for more complex machine learning training and testing.
-            It also includes some extra functionality for hyper-parameter
-            optimisation.
-          </p>
-        </li>
-
-
-
-        <li>
-          <a href="https://dcarte-transform.readthedocs.io/en/latest/" target="_blank">
-            <h4 class="project-item">Dcarte-Transform Python Package</h4>
-          </a>
-          <p class="project-description">
-            Dcarte-Transform package adds extra functionality to dcarte, an in-house
-            python package designed for loading the UK DRI Minder data.
-            Specifically Dcarte-Transform adds extra abilities
-            for machine learning research. It also includes a feature engineering
-            recipe for easy access to engineered features.
-          </p>
-        </li>
-
-
-
-        <li>
-          <a href="https://pdutils.readthedocs.io/en/latest/" target="_blank">
-            <h4 class="project-item">PDUtils Python Package</h4>
-          </a>
-          <p class="project-description">
-            Pandas Utils adds extra functionality to DataFrames.
-          </p>
-        </li>
-
-
-
-
       </ul>
+
+      <p>
+        Other projects can be found on my <a href="https://github.com/alexcapstick">GitHub</a>.
+      </p>
 
 
 
