--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Alex Capstick</title>
+  <title>Alexander Capstick</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
@@ -62,7 +62,7 @@
 
     <div class="headline" id="top_page">
       <div class="container">
-        <h1>Alex Capstick</h1>
+        <h1>Alexander Capstick</h1>
       </div>
     </div>
 
