--- a/llm-elicited-priors.html
+++ b/llm-elicited-priors.html
@@ -167,7 +167,7 @@
     <div class="container is-max-desktop">
       <div>
         <a href="https://github.com/alexcapstick/autoelicit" target="_blank">
-          <img class="figure" src="./llm-elicited-priors/static/images/autoelicit_logo.png" style="width: 50%" />
+          <img class="figure" src="./llm-elicited-priors/static/images/autoelicit_logo.png" style="width: 50%; margin-top: 0em" />
         </a>
         <h2 class="figure-caption has-text-centered">
           To implement these methods, please use the python package: <br><a
