--- a/llm-elicited-priors.html
+++ b/llm-elicited-priors.html
@@ -61,6 +61,9 @@
             <h1 class="title publication-title">AutoElicit: Using
               Large Language Models for Expert Prior Elicitation in
               Predictive Modelling</h1>
+              <div class="journal-name">
+                <p>Accepted at the International Conference on Machine Learning (ICML) 2025</p>
+              </div>
             <div class="publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
