--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
       <h4>I am curious about all things ML and Maths, but specifically:</h4>
       <p>
       <ul>
+        <li> The use of machine learning for science or health </li>
         <li> The use of pretrained models and LLMs in healthcare </li>
-        <li> Learning from noisy data </li>
         <li> Predicting clinical events from time-series data </li>
-        <li> Meta-learning </li>
+        <li> Representation learning of in-home monitoring data </li>
       </ul>
       </p>
 
