--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       <h3 class="featurette-heading">About Me</h3>
       <img class="featurette-image img-circle img-responsive pull-left" src="./assets/alex_capstick.jpeg">
       <p>
-        I am a student at Imperial College London pursuing a PhD focused on developing
-        machine learning techniques for the extraction of clinical insights from in-home monitoring data,
-        focusing on people living with Dementia.
+        I am a PhD student at Imperial College London studying the use of machine learning methods for 
+        remote healthcare monitoring in dementia care. 
+        Before my doctoral research, I studied BSc Mathematics at UCL and MSc Applied Mathematics at Imperial. 
       </p>
 
       <p>
