Update interest text

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <div class="featurette">
       <h3 class="featurette-heading">My Interests</h3>
-      <h4>I am curious about all things ML and Maths, but specifically:</h4>
+      <h4>I interested in all things ML and Maths, but specifically:</h4>
       <p>
       <ul>
         <li> The use of machine learning for science or health </li>
