Update my status as travelling!

--- a/index.html
+++ b/index.html
@@ -77,13 +77,16 @@
       <h3 class="featurette-heading">About Me</h3>
       <img class="featurette-image img-circle img-responsive pull-left" src="./assets/alex_capstick.jpeg">
       <p>
-        I am a PhD student at Imperial College London studying the use of machine learning methods for 
+        I am currently exploring some of South East Asia and plan to be back to my research some time in early 2026!
+      </p>
+      <p>
+        I recently finished my PhD at Imperial College London studying the use of machine learning methods for 
         remote healthcare monitoring in dementia care. 
         Before my doctoral research, I studied BSc Mathematics at UCL and MSc Applied Mathematics at Imperial. 
       </p>
 
       <p>
-        My interests are in theoretical machine learning as well as
+        My interests are in theoretical machine learning and
         building new techniques that are applicable to healthcare.
       </p>
 
@@ -121,7 +124,6 @@
 
 
 
-
     <hr class="featurette-divider" id="publications">
 
     <div class="featurette">
@@ -135,7 +137,6 @@
         </div>
       </div>
     </div>
-
 
 
 
