--- a/index.html
+++ b/index.html
@@ -82,23 +82,16 @@
       <p>
         I recently finished my PhD at Imperial College London studying the use of machine learning methods for 
         remote healthcare monitoring in dementia care. 
+        I studied as part of the <a href="https://tmi-lab.github.io/" target="_blank">Translational Machine Intelligence Lab</a>,
+        supervised by <a href="https://profiles.imperial.ac.uk/p.barnaghi" target="_blank">Payam Barnaghi</a>.
         Before my doctoral research, I studied BSc Mathematics at UCL and MSc Applied Mathematics at Imperial. 
       </p>
 
       <p>
-        My interests are in theoretical machine learning and
-        building new techniques that are applicable to healthcare.
-      </p>
-
-      <p>
-        I am a part of the
-        <a href="https://tmi-lab.github.io/" target="_blank">Translational Machine Intelligence Lab</a>,
-        supervised by
-        <a href="https://profiles.imperial.ac.uk/p.barnaghi" target="_blank">Payam Barnaghi</a>.
+        My interest is machine learning and its application to healthcare.
       </p>
 
     </div>
-
 
 
 
