--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </p>
 
       <p>
-        My interest is machine learning and its application to healthcare.
+        I am interested in machine learning and its application to healthcare.
       </p>
 
     </div>
